--- a/_data/semester-info.yml
+++ b/_data/semester-info.yml
@@ -2,13 +2,13 @@ break: 14
 start-date: 2022-08-21T12:00:00Z
 start-day: wednesday
 semester: Fall 2022
-textbook: https://learn.zybooks.com/zybook/BOISESTATECS401PanterFall2022
-discussion: https://piazza.com/boisestate/fall2022/cs401/home
+textbook: https://learn.zybooks.com/zybook/BOISESTATECS401PanterSpring2022
+discussion: https://boisestatecanvas.instructure.com/courses/10422
 github: https://github.com/shanep-web
-office-hours: https://boisestatecanvas.instructure.com/courses/10423/
-grades: https://boisestatecanvas.instructure.com/courses/10423/grades
-exams: https://boisestatecanvas.instructure.com/courses/10423/quizzes
-example-exams: https://boisestatecanvas.instructure.com/courses/10423/files/folder/example-exams
+office-hours: https://boisestatecanvas.instructure.com/courses/10422
+grades: https://boisestatecanvas.instructure.com/courses/10422/grades
+exams: https://boisestatecanvas.instructure.com/courses/10422/quizzes
+example-exams: https://boisestatecanvas.instructure.com/courses/10422/files/folder/example-exams
 learning-objectives: 
 instructor: Shane Panter
 email: shanepanter@boisestate.edu
