--- a/_data/semester-info.yml
+++ b/_data/semester-info.yml
@@ -1,7 +1,7 @@
 break: 14
 start-date: 2022-08-21T12:00:00Z
 start-day: wednesday
-semester: Fall 2022
+semester: Spring 2022
 textbook: https://learn.zybooks.com/zybook/BOISESTATECS401PanterSpring2022
 discussion: https://boisestatecanvas.instructure.com/courses/10422
 github: https://github.com/shanep-web
