--- a/.github/workflows/github-pages-deploy.yml
+++ b/.github/workflows/github-pages-deploy.yml
@@ -6,14 +6,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout 🛎️
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
+        with:
+          ref: main
 
       - name: Build jekyll  🔧 
         run: |
           docker run \
           -v ${{ github.workspace }}:/srv/jekyll \
           jekyll/builder:latest /bin/bash -c "chmod -R 777 /srv/jekyll && jekyll build"
-
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@v4.2.5
         with:
