--- a/_data/semester-info.yml
+++ b/_data/semester-info.yml
@@ -2,7 +2,7 @@ break: 14
 start-date: 2022-08-21T12:00:00Z
 start-day: wednesday
 semester: Fall 2022
-textbook: https://learn.zybooks.com/zybook/BOISESTATECS401PanterFall2022
+textbook:
 discussion: https://piazza.com/boisestate/fall2022/cs401/home
 github: https://github.com/shanep-web
 office-hours: https://boisestatecanvas.instructure.com/courses/10423/
