--- a/_data/semester-info.yml
+++ b/_data/semester-info.yml
@@ -3,9 +3,10 @@ start-date: 2022-08-21T12:00:00Z
 start-day: wednesday
 semester: Fall 2022
 discussion: https://piazza.com/boisestate/fall2022/cs401/home
-github: https://github.com/shanep-web-fall2022
-office-hours: https://boisestatecanvas.instructure.com/courses/10423/
-grades: https://boisestatecanvas.instructure.com/courses/10423/grades
+github: https://github.com/cs401-fall2022
+office-hours: https://boisestatecanvas.instructure.com/courses/14640
+grades: https://boisestatecanvas.instructure.com/courses/14640/grades
+textbook: https://learn.zybooks.com/zybook/BOISESTATECS401516PanterFall2022
 learning-objectives: 
 instructor: Shane Panter
 email: shanepanter@boisestate.edu
