Move LO into spreadsheet

--- a/_data/semester-info.yml
+++ b/_data/semester-info.yml
@@ -7,7 +7,7 @@ github: https://github.com/cs401-fall2022
 office-hours: https://boisestatecanvas.instructure.com/courses/14640
 grades: https://boisestatecanvas.instructure.com/courses/14640/grades
 textbook: https://learn.zybooks.com/zybook/BOISESTATECS401516PanterFall2022
-learning-objectives: 
+learning-objectives: https://docs.google.com/spreadsheets/d/1XZJ_oXxTwgnL0vkrBdRjkDB50WlsOPhKUcu-gsZb25o/edit?usp=sharing
 instructor: Shane Panter
 email: shanepanter@boisestate.edu
 text-logo: //CS401
