--- a/_data/semester-info.yml
+++ b/_data/semester-info.yml
@@ -31,7 +31,7 @@ welcome-message: >
 welcome-video: https://www.youtube.com/embed/UkLlL65EyHg
 
 labs:
-   lesson02: /docs/starter-code.html
+   lesson02: https://classroom.github.com/a/EOvwi8yY
    lesson04: /docs/starter-code.html
    lesson06: /docs/starter-code.html
    lesson08: /docs/starter-code.html
@@ -43,7 +43,7 @@ labs:
    lesson20: /docs/starter-code.html
    lesson22: /docs/starter-code.html
    lesson23: /docs/starter-code.html
-   lesson30: /docs/starter-code.html
+   lesson30: https://classroom.github.com/a/8WkfZ7iO
 
 reading:
   lesson03: Reading Homework (ch1)
