--- a/_data/semester-info.yml
+++ b/_data/semester-info.yml
@@ -32,7 +32,7 @@ welcome-video: https://www.youtube.com/embed/UkLlL65EyHg
 
 labs:
    lesson02: https://classroom.github.com/a/EOvwi8yY
-   lesson04: /docs/starter-code.html
+   lesson04: https://classroom.github.com/a/PlO6kmMX
    lesson06: /docs/starter-code.html
    lesson08: /docs/starter-code.html
    lesson10: /docs/starter-code.html
