--- a/_data/semester-info.yml
+++ b/_data/semester-info.yml
@@ -19,14 +19,14 @@ catalog: >
 
 welcome-message: >
    Welcome to the class! My name is Shane Panter and I will be your instructor for this course. For
-   many students this will be the first time you have been exposed to web development 
+   many students, this will be the first time you have been exposed to web development 
    topics. This course has been designed to take someone who has never seen these concepts before to
    being able to produce relatively complex programs in 16 weeks. This class is a three credit
    course and it is specifically designed to require 8 to 10 hours of work each week. In order to
    succeed in the course, it will be critical for you to manage your time effectively and keep up
    with the reading and lab activities.  Please take some time to get familiar with the course
    website. Pay close attention to when the homework assignments are due to ensure you get
-   everything in on time. <br><br> We will be interacting with each other primarily through github,
+   everything in on time. <br><br> We will be interacting with each other primarily through Github,
    discussion forums, and videos. Get started by completing the Course Introduction homework below!
 welcome-video: https://www.youtube.com/embed/UkLlL65EyHg
 
