--- a/_data/semester-info.yml
+++ b/_data/semester-info.yml
@@ -33,8 +33,8 @@ welcome-video: https://www.youtube.com/embed/UkLlL65EyHg
 labs:
    lesson02: https://classroom.github.com/a/EOvwi8yY
    lesson04: https://classroom.github.com/a/PlO6kmMX
-   lesson06: /docs/starter-code.html
-   lesson08: /docs/starter-code.html
+   lesson06: https://classroom.github.com/a/tz8RBEVL
+   lesson08: https://classroom.github.com/a/9RxVgxG9
    lesson10: /docs/starter-code.html
    lesson12: /docs/starter-code.html
    lesson14: /docs/starter-code.html
@@ -44,6 +44,10 @@ labs:
    lesson22: /docs/starter-code.html
    lesson23: /docs/starter-code.html
    lesson30: https://classroom.github.com/a/8WkfZ7iO
+
+flip:
+   lesson06: https://flip.com/5d819f8e
+   lesson08: https://flip.com/81339786
 
 reading:
   lesson03: Reading Homework (ch1)
