added in lesson10 and lesson12

--- a/_data/semester-info.yml
+++ b/_data/semester-info.yml
@@ -35,8 +35,8 @@ labs:
    lesson04: https://classroom.github.com/a/PlO6kmMX
    lesson06: https://classroom.github.com/a/tz8RBEVL
    lesson08: https://classroom.github.com/a/9RxVgxG9
-   lesson10: /docs/starter-code.html
-   lesson12: /docs/starter-code.html
+   lesson10: https://classroom.github.com/a/1HKS3fTS
+   lesson12: https://classroom.github.com/a/nGer0pao
    lesson14: /docs/starter-code.html
    lesson16: /docs/starter-code.html 
    lesson18: /docs/starter-code.html 
@@ -48,6 +48,8 @@ labs:
 flip:
    lesson06: https://flip.com/5d819f8e
    lesson08: https://flip.com/81339786
+   lesson10: https://flip.com/2e60ab0d
+   lesson12: https://flip.com/48b1885c
 
 reading:
   lesson03: Reading Homework (ch1)
