Updated classroom links

--- a/_data/semester-info.yml
+++ b/_data/semester-info.yml
@@ -37,12 +37,12 @@ labs:
    lesson08: https://classroom.github.com/a/9RxVgxG9
    lesson10: https://classroom.github.com/a/1HKS3fTS
    lesson12: https://classroom.github.com/a/nGer0pao
-   lesson14: /docs/starter-code.html
-   lesson16: /docs/starter-code.html 
-   lesson18: /docs/starter-code.html 
+   lesson14: https://classroom.github.com/a/gI9ddlmi
+   lesson16: https://classroom.github.com/a/gI9ddlmi
+   lesson18: https://classroom.github.com/a/gI9ddlmi
    lesson20: /docs/starter-code.html
    lesson22: /docs/starter-code.html
-   lesson23: /docs/starter-code.html
+   lesson23: https://classroom.github.com/a/8ZxUWnD1
    lesson30: https://classroom.github.com/a/8WkfZ7iO
 
 flip:
