--- a/_data/semester-info.yml
+++ b/_data/semester-info.yml
@@ -50,6 +50,7 @@ flip:
    lesson08: https://flip.com/81339786
    lesson10: https://flip.com/2e60ab0d
    lesson12: https://flip.com/48b1885c
+   lesson20: https://flip.com/17824a8a
 
 reading:
   lesson03: Reading Homework (ch1)
