--- a/_data/semester-info.yml
+++ b/_data/semester-info.yml
@@ -40,7 +40,7 @@ labs:
    lesson14: https://classroom.github.com/a/gI9ddlmi
    lesson16: https://classroom.github.com/a/gI9ddlmi
    lesson18: https://classroom.github.com/a/gI9ddlmi
-   lesson20: /docs/starter-code.html
+   lesson20: https://classroom.github.com/a/6kNeQZCN
    lesson22: /docs/starter-code.html
    lesson23: https://classroom.github.com/a/8ZxUWnD1
    lesson30: https://classroom.github.com/a/8WkfZ7iO
