Working on lambda assignments

--- a/_data/semester-info.yml
+++ b/_data/semester-info.yml
@@ -41,7 +41,7 @@ labs:
    lesson16: https://classroom.github.com/a/gI9ddlmi
    lesson18: https://classroom.github.com/a/gI9ddlmi
    lesson20: https://classroom.github.com/a/6kNeQZCN
-   lesson22: /docs/starter-code.html
+   lesson22: https://classroom.github.com/a/uHQ7M1yS
    lesson23: https://classroom.github.com/a/8ZxUWnD1
    lesson30: https://classroom.github.com/a/8WkfZ7iO
 
@@ -51,6 +51,8 @@ flip:
    lesson10: https://flip.com/2e60ab0d
    lesson12: https://flip.com/48b1885c
    lesson20: https://flip.com/17824a8a
+   lesson22: https://flip.com/0b9b1876
+   lesson28: https://flip.com/dd67dc9b
 
 reading:
   lesson03: Reading Homework (ch1)
