--- a/_data/semester-info.yml
+++ b/_data/semester-info.yml
@@ -42,7 +42,7 @@ labs:
    lesson18: https://classroom.github.com/a/gI9ddlmi
    lesson20: https://classroom.github.com/a/6kNeQZCN
    lesson22: https://classroom.github.com/a/IEgewjRY
-   lesson23: https://classroom.github.com/a/8ZxUWnD1
+   lesson23: /docs/starter-code.html
    lesson30: https://classroom.github.com/a/8WkfZ7iO
 
 flip:
