Updated checkpoint links

--- a/_data/semester-info.yml
+++ b/_data/semester-info.yml
@@ -43,6 +43,11 @@ labs:
    lesson20: https://classroom.github.com/a/6kNeQZCN
    lesson22: https://classroom.github.com/a/IEgewjRY
    lesson23: https://classroom.github.com/a/8ZxUWnD1
+   lesson24: https://classroom.github.com/a/8ZxUWnD1
+   lesson25: https://classroom.github.com/a/8ZxUWnD1
+   lesson26: https://classroom.github.com/a/8ZxUWnD1
+   lesson27: https://classroom.github.com/a/8ZxUWnD1
+   lesson28: https://classroom.github.com/a/8ZxUWnD1
    lesson30: https://classroom.github.com/a/8WkfZ7iO
 
 flip:
